# domtree

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/domtree/: __init__.py  batch.py  capture.py  cli.py  comparison.py  human_tree.py  llm_tree.py  pipeline.py  reporting.py  schema.py  summaries.py  tree.py
src/domtree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/domtree/mapping/: __init__.py  categories.py  mapper.py  stats.py
src/domtree/metrics/: __init__.py  hierarchical_f1.py  mismatch.py  reading_order.py  structure.py  ted.py
src/domtree/visualization/: __init__.py  tree_plot.py
