[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domtree"
version = "0.1.0"
description = "Structural difference analysis between human-perceived and LLM-derived DOM trees"
authors = [{ name = "DomTree Team" }]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "numpy",
    "pandas",
    "playwright",
    "pillow",
    "zss",
    "networkx",
    "scipy",
    "matplotlib",
    "typer[all]",
    "tqdm"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
domtree = "domtree.cli:app"
